<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectSkewRegionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <View
                android:id="@+id/bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_rect"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cornerselect"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_rect"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gesture"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:importantForAccessibility="no" />

            <ImageView
                android:id="@+id/pointer_tl"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/pointer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:importantForAccessibility="no"  />

            <ImageView
                android:id="@+id/pointer_bl"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/pointer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="300dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:importantForAccessibility="no" />

            <ImageView
                android:id="@+id/pointer_tr"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/pointer"
                android:scaleX="-1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="300dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:importantForAccessibility="no" />

            <ImageView
                android:id="@+id/pointer_br"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/pointer"
                android:scaleX="-1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="300dp"
                android:layout_marginLeft="300dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:importantForAccessibility="no" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>